lab1/Test/L1-A-11-11.output
Error Type B at Line 1
Error Type B at Line 5
Error Type B at Line 8
Error Type B at Line 12
Error Type B at Line 25
Error Type B at Line 26
Error Type B at Line 26
Error Type B at Line 37
Error Type B at Line 51
